# OctoStreamControl

./: CLAUDE.md  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
extras/: README.txt  octostreamcontrol.md
extras/github/: bug_report.yml  feature_request.yml
octostreamcontrol/: __init__.py
octostreamcontrol/static/js/: octostreamcontrol.js
octostreamcontrol/templates/: octostreamcontrol_oauth_result.jinja2  octostreamcontrol_settings.jinja2  octostreamcontrol_tab.jinja2
translations/: README.txt
